<resources>
    <string name="app_name">TP3Design</string>
    <string name="labelLogin">LOGIN</string>
    <string name="labelUseremail">Email: </string>
    <string name="labelPass">Senha: </string>
    <string name="btnSubmit">ENTRAR</string>
    <string name="btnSingup">CADASTRAR</string>
    <string name="nome">Nome:</string>
    <string name="hint_name">Digite seu nome</string>
    <string name="email">E-mail:</string>
    <string name="hint_email">Digite seu e-mail</string>
    <string name="register">CADASTRAR</string>
    <string name="clear">LIMPAR</string>
    <string name="appName">CADASTRO</string>
    <string name="password">Senha:</string>
    <string name="hint_password">Digite sua senha</string>
    <string name="userNameLogin">Digite seu e-mail</string>
    <string name="passwordLogin">Digite sua senha</string>
    <string name="wellcome">Seja bem-vindo:</string>
    <string name="btn_reset_password">RECUPERAR SENHA</string>
    <string name="emailChange">Email</string>
</resources>
