<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="@dimen/small_horizontal_margin">

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_marginTop="@dimen/medium_horizontal_margin"
        android:background="@color/colorPrimaryDark"
        android:text="@string/labelLogin"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/labelUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_marginTop="@dimen/medium_horizontal_margin"
        android:text="@string/labelUsername"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/fieldUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/userNameLogin"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/labelUsername"
        android:layout_toRightOf="@+id/labelUsername"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/labelPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelUsername"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:text="@string/labelPass"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/fieldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/passwordLogin"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/labelPassword"
        android:layout_toRightOf="@+id/labelPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_below="@+id/fieldPassword"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/medium_horizontal_margin"
        android:onClick="btnSub"
        android:text="@string/btnSubmit" />


    <Button
        android:id="@+id/btnSingup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/medium_horizontal_margin"
        android:onClick="btnSingUp"
        android:text="@string/btnSingup" />

</RelativeLayout>