<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="2"
    tools:context=".TableActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_horizontal_margin"
        android:layout_marginLeft="@dimen/medium_horizontal_margin"
        android:layout_marginRight="@dimen/medium_horizontal_margin"
        android:contentDescription="@string/appName">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/appName"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="40dp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_horizontal_margin"
        android:layout_marginLeft="@dimen/medium_horizontal_margin"
        android:layout_marginRight="@dimen/medium_horizontal_margin"
        android:contentDescription="@string/hint_name">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textStyle="bold"
            android:textSize="25dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="text"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_horizontal_margin"
        android:layout_marginLeft="@dimen/medium_horizontal_margin"
        android:layout_marginRight="@dimen/medium_horizontal_margin"
        android:contentDescription="@string/hint_surname">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sobreNome"
            android:textStyle="bold"
            android:textSize="25dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_surname"
            android:inputType="text"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_horizontal_margin"
        android:layout_marginLeft="@dimen/medium_horizontal_margin"
        android:layout_marginRight="@dimen/medium_horizontal_margin"
        android:contentDescription="@string/hint_email">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold"
            android:textSize="25dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_horizontal_margin"
        android:layout_marginLeft="@dimen/medium_horizontal_margin"
        android:layout_marginRight="@dimen/medium_horizontal_margin"
        android:contentDescription="@string/clear">

        <Button
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="2"
            android:text="@string/clear"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_horizontal_margin"
        android:layout_marginLeft="@dimen/medium_horizontal_margin"
        android:layout_marginRight="@dimen/medium_horizontal_margin"
        android:contentDescription="@string/register">

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="2"
            android:text="@string/register"/>

    </TableRow>

</TableLayout>


